--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-html-email": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-scroll-memory": "^2.0.6",
